--- a/src/routes/form/index.scss
+++ b/src/routes/form/index.scss
@@ -2,12 +2,13 @@ form {
   display: flex;
   flex-direction: column;
   gap: var(--size-2);
-  width: 800px;
-  max-width: 90%;
+  width: 100%;
+  max-width: 700px;
   margin: var(--size-2) auto;
   padding: 16px;
   background-color: var(--surface);
   border-radius: var(--size-0);
+  box-sizing: border-box;
   footer {
     display: flex;
     align-items: center;
